added all blocks

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,14 @@
 .grid {
   margin: auto;
+  position: relative;
   height: 300px;
   width: 600px;
   border: solid 1px black;
+}
+
+.block {
+  position: absolute;
+  height: 20px;
+  width: 100px;
+  background-color: blue;
 }
