--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,18 @@
   width: 100px;
   background-color: blue;
 }
+
+.user {
+  position: absolute;
+  height: 20px;
+  width: 100px;
+  background-color: blueviolet;
+}
+
+.ball {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: red;
+}
